# data-migration-

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  run_migrate.py  seed_metadata_db.py
api/: auth.py  main.py  metadata_storage.py  schemas.py  tasks.py
api/routes/: auth.py  connections.py
docs/: CONNECTION_MODULE_PLAN.md  USAGE.md
