[project]
name = "data-migration-connectors"
version = "0.1.0"
description = "Async-first data migration connectors for AWS"
requires-python = ">=3.12"
dependencies = [
    "file",
    "psycopg-binary>=3.3.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-jose[cryptography]>=3.5.0",
]

[tool.uv.sources]
file = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/file",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "moto[s3]>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "python-dotenv>=1.0",
    "file",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH", "T20", "SIM", "RET"]
ignore = ["S101", "TRY003", "UP035", "UP045", "UP047", "UP006", "E501", "W292", "I001", "F401", "RET505", "SIM117"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "packages/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
